Update CRUD targets and separate target type validation

--- a/config/ui/controllers.yaml
+++ b/config/ui/controllers.yaml
@@ -361,10 +361,7 @@ services:
 
     target.add.page:
         class: 'Hal\UI\Controllers\Target\AddTargetController'
-        arguments:
-            - '@target.add.twig'
-            - '@doctrine.em'
-            - '@uri'
+        arguments: ['@target.add.twig', '@doctrine.em']
     target.add.twig:
         parent: 'twig.template'
         calls: [['setTemplate', ['target/add_target.twig']]]
