--- a/config/ui/controllers.yaml
+++ b/config/ui/controllers.yaml
@@ -141,10 +141,7 @@ services:
 
     users.page:
         class: 'Hal\UI\Controllers\User\UsersController'
-        arguments:
-            - '@users.twig'
-            - '@doctrine.em'
-            - '@notFoundHandler'
+        arguments: ['@users.twig', '@doctrine.em']
     users.twig:
         parent: 'twig.template'
         calls: [['setTemplate', ['user/users.twig']]]
@@ -475,10 +472,7 @@ services:
 
     builds.page:
         class: 'Hal\UI\Controllers\Build\BuildsController'
-        arguments:
-            - '@builds.twig'
-            - '@doctrine.em'
-            - '@notFoundHandler'
+        arguments: ['@builds.twig', '@doctrine.em']
     builds.twig:
         parent: 'twig.template'
         calls: [['setTemplate', ['build/builds.twig']]]
@@ -518,17 +512,17 @@ services:
 
     releases.page:
         class: 'Hal\UI\Controllers\Release\ReleasesController'
-        arguments:
-            - '@releases.twig'
-            - '@doctrine.em'
-            - '@notFoundHandler'
+        arguments: ['@releases.twig', '@doctrine.em']
     releases.twig:
         parent: 'twig.template'
         calls: [['setTemplate', ['release/releases.twig']]]
 
     release.page:
         class: 'Hal\UI\Controllers\Release\ReleaseController'
-        arguments: ['@release.twig', '@service.event_logs']
+        arguments:
+            - '@release.twig'
+            - '@service.event_logs'
+            - '@doctrine.em'
     release.twig:
         parent: 'twig.template'
         calls: [['setTemplate', ['release/release.twig']]]
@@ -550,20 +544,12 @@ services:
             - '@release.start.validator'
             - '@sticky.environment'
             - '@uri'
-    deploy.select_environment.middleware:
-        class: 'Hal\UI\Controllers\Release\SelectEnvironmentMiddleware'
-        arguments:
-            - '@release.start.twig'
-            - '@doctrine.em'
-            - '@uri'
-            - '@notFoundHandler'
 
     release.rollback.page:
         class: 'Hal\UI\Controllers\Release\RollbackController'
         arguments:
             - '@release.rollback.twig'
             - '@doctrine.em'
-            - '@notFoundHandler'
     release.rollback.twig:
         parent: 'twig.template'
         calls: [['setTemplate', ['release/rollback_release.twig']]]
@@ -592,10 +578,7 @@ services:
 
     admin.audit_history.page:
         class: 'Hal\UI\Controllers\Admin\AuditHistoryController'
-        arguments:
-            - '@admin.audit_history.twig'
-            - '@doctrine.em'
-            - '@notFoundHandler'
+        arguments: ['@admin.audit_history.twig', '@doctrine.em']
     admin.audit_history.twig:
         parent: 'twig.template'
         calls: [['setTemplate', ['admin/audit_history.twig']]]
