--- a/config/ui/routes.yaml
+++ b/config/ui/routes.yaml
@@ -411,24 +411,20 @@ parameters:
                 admin.permissions:
                     method: 'GET'
                     route: '/admin/permissions[/page/{page:%r.digit%}]'
-                    stack: ['admin.permissions.page']
+                    stack: ['middleware.is_super', 'admin.permissions.page']
 
                 user_permissions.management:
                     route: '/users/{user:%r.guid%}/permissions'
-                    stack: ['middleware.require_entity', 'middleware.nested_entity']
+                    stack: ['middleware.is_super', 'middleware.require_entity', 'middleware.nested_entity']
                     routes:
-                        admin.permissions.refresh:
-                            method: 'POST'
-                            route: '/refresh'
-                            stack: ['admin.permissions.refresh.handler']
-                        admin.permissions.add:
+                        user_permissions.add:
                             method: ['GET', 'POST']
                             route: '/add'
-                            stack: ['admin.permissions.add.page']
-                        admin.permissions.remove:
+                            stack: ['middleware.require_csrf', 'user_permissions.add.page']
+                        user_permissions.remove:
                             method: ['GET', 'POST']
                             route: '/{user_permission:%r.guid%}/remove'
-                            stack: ['admin.permissions.remove.middleware', 'admin.permissions.remove.handler']
+                            stack: ['middleware.require_csrf', 'user_permissions.remove.page']
 
         ################################################################################################################
         # administrative
