--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,6 @@
     "autoload": {
         "psr-4": { "Hal\\UI\\": "src" }
     },
-    "repositories": [
-        { "type": "path", "url": "../hal-core" }
-    ],
 
     "require": {
         "php-64bit": "~7.1",
@@ -39,7 +36,7 @@
         "predis/predis":            "~1.0",
         "psr/log":                  "*",
 
-        "hal/hal-core":             "dev-db-refactor",
+        "hal/hal-core":             "dev-master",
 
         "ql/mcp-cache":             "~3.0.0",
         "ql/mcp-common":            "~1.0",
@@ -68,7 +65,7 @@
         "phpstan/phpstan":              "~0.9",
         "squizlabs/php_codesniffer":    "~3.0",
 
-        "codedungeon/phpunit-result-printer": "~0.4",
+        "codedungeon/phpunit-result-printer": "~0.5",
         "mockery/mockery":                    "~1.0",
         "phpunit/phpunit":                    "~6.2"
     }
